--- a/.gitmodules
+++ b/.gitmodules
@@ -1,3 +1,3 @@
 [submodule "refreshed/wikifont"]
 	path = refreshed/wikifont
-	url = https://github.com/munmay/WikiFont.git
+	url = https://github.com/wikimedia/WikiFont.git
