--- a/composer.json
+++ b/composer.json
@@ -9,7 +9,7 @@
 	},
 	"scripts": {
 		"test": [
-			"parallel-lint . --exclude vendor"
+			"parallel-lint . --exclude vendor --exclude node_modules"
 		]
 	}
 }
